--- a/package.json
+++ b/package.json
@@ -50,12 +50,17 @@
     "stylelint-prettier": "^2.0.0"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.2",
+    "axios": "^1.3.3",
     "classnames": "^2.3.2",
     "mochawesome": "^7.1.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.0.5",
     "react-router-dom": "^6.7.0",
     "react-scripts": "^5.0.1",
+    "redux": "^4.2.1",
+    "redux-saga": "^1.2.2",
     "swiper": "^9.0.3",
     "web-vitals": "^3.0.3"
   },
